Fixed Scrollbar

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1102,3 +1102,14 @@ section {
   }
 }
 
+::-webkit-scrollbar {
+  width: 5px;
+}
+
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #888;
+}
